second test commit

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     </h1>
     <p>Join us and help us and our friends fight hunger
     </p>
-    <a href="home.html"><button class="button1">Who We are</button></a>
+    <div class="buttton"><a href="home.html" ><button class="button1" >Who We are</button></a>
     <a href="donationform.html"><button class="button2">Donate</button></body></a>
     <a href="list.html"><button class="button3">Our Heroes</button></a>
+    </div>
 </body>
 </html>
+
+/*this is to test the github */
